# blog-posts

./: .gitignore  Cargo.toml  README.md  rust-toolchain  rustfmt.toml
.certs/: cert.pem  key.pem  root-ca.crt  root-ca.key
.scripts/: esp32-postgresql.sh  live-chat.sh  postgres.sh
esp32-postgresql/: Cargo.toml  README.md
esp32-postgresql/.cargo/: config.toml
esp32-postgresql/src/: main.rs
live-chat/: README.md
live-chat/backend/: Cargo.toml
live-chat/backend/src/: main.rs  ws.rs
live-chat/frontend/: package.json  svelte.config.js
live-chat/frontend/src/routes/: +page.svelte
